# lab-flask

./: .gitignore  Dockerfile  gunicorn_starter.sh  install-packages.sh  requirements.txt  setup.cfg  wsgi.py
laboratorium/: User.py  __init__.py  admin.py  app.py  auth.py  db.py  events.py  helpers.py  hooks.py  influx_functions.py  mongo_functions.py  mqtt_functions.py  mqtt_handler.py  redis_functions.py  routes.py  schema.sql  slash_command.py
scripts/: transfer.py
templates/: index.html
