[metadata]
license_file = LICENSE

[flake8]
max-line-length = 127
count = True
exit-zero = True
max-complexity = 10
statistics = True
show-source = True
exclude =
    venv,
    .eggs

[options]
tests_require = pytest

[aliases]
# Alias `setup.py test` to `setup.py pytest`
test = pytest

[tool:pytest]
python_files =
    test_*.py
    *_test.py
addopts =
    -ra
    --strict
    --doctest-modules
    --doctest-glob=\*.md
    --tb=short
testpaths =
    tests

[tool:isort]
line_length = 120
balanced_wrapping = True
multi_line_output = 0
known_first_party = sanity
default_section = THIRDPARTY
import_heading_firstparty = Internal imports
forced_separate = test_sanity
not_skip = __init__.py